# ChangeLog for sys-kernel/calculate-sources
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*calculate-sources-2.6.34.4 (16 Aug 2010)

  16 Aug 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -calculate-sources-2.6.34.1.ebuild, +calculate-sources-2.6.34.4.ebuild:
  bump new version

*calculate-sources-2.6.34.1 (06 Jul 2010)
*calculate-sources-2.6.32.16 (06 Jul 2010)

  06 Jul 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  +calculate-sources-2.6.32.16.ebuild, +calculate-sources-2.6.34.1.ebuild:
  version bumps, removed old versions

*calculate-sources-2.6.34 (10 Jun 2010)

  10 Jun 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-sources-2.6.34.ebuild:
  Bump version.

*calculate-sources-2.6.32.15 (02 Jun 2010)

  02 Jun 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -calculate-sources-2.6.32.14.ebuild, +calculate-sources-2.6.32.15.ebuild:
  version bump

*calculate-sources-2.6.32.14 (27 May 2010)

  27 May 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  +calculate-sources-2.6.32.14.ebuild:
  version bump

*calculate-sources-2.6.32.11 (02 Apr 2010)

  02 Apr 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  +calculate-sources-2.6.32.11.ebuild:
  Add calculate-sources-2.6.32.11.ebuild

  29 Mar 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  calculate-sources-2.6.32.7.ebuild, calculate-sources-2.6.32.8.ebuild,
  calculate-sources-2.6.32.9.ebuild, calculate-sources-2.6.32.10.ebuild:
  Fix lzma-utils xz-utils depend.

*calculate-sources-2.6.32.10 (23 Mar 2010)

  23 Mar 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  +calculate-sources-2.6.32.10.ebuild:
  Added calculate-sources 2.6.32.10

  24 Nov 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru> +metadata.xml:
  Added metadata.
