@@ -7,9 +7,11 @@ DIST deblob-check-2.6.32 247608 RMD160 840bf8a229ea79810519eee6241edb85b78a6562 
 DIST deblob-check-2.6.34 268995 RMD160 0186c8b3ef596feb0be938a7a75da620a7f425b2 SHA1 59f978b9455099c634947638ebf1ce6c82c1aead SHA256 2c995748c14bed50b93746a35a44b33138b2758031e3ef7d0159911cbab83c30
 DIST linux-2.6.32.tar.bz2 64424138 RMD160 b93742cbaf8174f2200d2dbef0d47a26c618039c SHA1 410b4fc818023bfef60064e973ff0ab46d3bfb19 SHA256 5099786d80b8407d98a619df00209c2353517f22d804fdd9533b362adcb4504e
 DIST linux-2.6.34.tar.bz2 67633622 RMD160 dafd721b00c13e3652405b517b379eed10020bf4 SHA1 4188857ba71f301991dc56285f593e9c311e5824 SHA256 fa395fec7de633df1cb85b6248b8f35af98380ed128a8bc465fb48bc4d252633
-DIST patch-2.6.32.19.bz2 566061 RMD160 d3df669564a43657a14edd24f812a30a372efffc SHA1 e93785c299556a462fd6cbd61eab4c7e6daf4f4c SHA256 fffd6853d01539281b7cf42c20d89776f654ec5cf6ad89301341cee4fcb71883
+DIST patch-2.6.32.20.bz2 566269 RMD160 524c70029c360ec44d9d10663fb5f53383560c0b SHA1 b14cd010943569d81092db72e6c00799b03cdee3 SHA256 d46f29d8e2c3f5f68e074ff6db33ba615486a0994d86f8d03586615e86c0ac52
 DIST patch-2.6.34.4.bz2 162519 RMD160 269e6cc547d57dccaf7580ed0e04ec343825ca5e SHA1 a01c8dce9d21a918831ae5f9a44bfc30e3239dcd SHA256 70646e58d02cca6cbe5b867df8cf153d6467266851476bea64e4db2b292bb7d4
-EBUILD calculate-sources-2.6.32.19.ebuild 738 RMD160 7df77879fe3155b94748845656e2ec32f6430e83 SHA1 319846c6760f2c42d8586bec53e4914336c6cf93 SHA256 7d2f5fb1e822de6205c11c430cf3b0c1522cff5037e47cd2ae9c37942fa175f2
+DIST patch-2.6.34.5.bz2 162888 RMD160 3a238ca263780a72bb471a7fc1f194b5acc7b3c9 SHA1 b2d918ed06a3457eb077742a8872aca278fea8f0 SHA256 bd029f2e218f95861ec84e6a2344a345012cfb4a6d172cbc2f80917343a85141
+EBUILD calculate-sources-2.6.32.20.ebuild 738 RMD160 7df77879fe3155b94748845656e2ec32f6430e83 SHA1 319846c6760f2c42d8586bec53e4914336c6cf93 SHA256 7d2f5fb1e822de6205c11c430cf3b0c1522cff5037e47cd2ae9c37942fa175f2
 EBUILD calculate-sources-2.6.34.4.ebuild 738 RMD160 7df77879fe3155b94748845656e2ec32f6430e83 SHA1 319846c6760f2c42d8586bec53e4914336c6cf93 SHA256 7d2f5fb1e822de6205c11c430cf3b0c1522cff5037e47cd2ae9c37942fa175f2
-MISC ChangeLog 1823 RMD160 c409b57879c25d243fee9491ddaeb35797378123 SHA1 5dff1f7a3cb7a46bad86c3a354d8b8c19dbd76f5 SHA256 53e2fd891ab8db3de2f644b839f849670148d4ae9e3f11b78be0ce21cf789464
+EBUILD calculate-sources-2.6.34.5.ebuild 740 RMD160 41c5b51d2aca64a9d139c81da028620216b6ec38 SHA1 0d5f633f6f868e2228c6d2388245e6794a19c6c5 SHA256 87bcd495d71ba3c55c7e6732f843cd0bc3bc14e21227ba011eb3ac2fac769fad
+MISC ChangeLog 2109 RMD160 4f95425dcaa80928feb36d3e0ccc6dd4173f1fe8 SHA1 368ca6dac0c04a9bc8ee940755e9c22faf05f6ad SHA256 fecce01af950692c7fe53dc8b51f2f56e3797c06c21a2510511a7e9260851fbd
 MISC metadata.xml 364 RMD160 308abbf758102b5591c353f41a62be6836f98693 SHA1 5029bd7cf897e4eb8f8e8fa935c02d4c73eb59db SHA256 0bee25282d797e432206373a8535689412a3f76f8974315f8ecf73536bf0e505
