@@ -2,6 +2,14 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-sources-2.6.34.5 (23 Aug 2010)
+*calculate-sources-2.6.32.20 (23 Aug 2010)
+
+  23 Aug 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  -calculate-sources-2.6.32.19.ebuild, +calculate-sources-2.6.32.20.ebuild,
+  +calculate-sources-2.6.34.5.ebuild:
+  bump new versions
+
 *calculate-sources-2.6.34.4 (16 Aug 2010)
 
   16 Aug 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
